<resources>
    <string name="hazizz">Házizz</string>
    <string name="hazizz_motto">Nekünk és nektek, mert mi is diákok vagyunk</string>
    <string name="app_name">Hazizz Droid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="header_item_in"></string>
    <string name="header_item_day">nap</string>
    <string name="header_item_later">múlva</string>
    <string-array name="days">
        <item>Hétfő</item>
        <item>Kedd</item>
        <item>Szerda</item>
        <item>Csütörtök</item>
        <item>Péntek</item>
        <item>Szombat</item>
        <item>Vasárnap</item>
    </string-array>
    <string name="tomorrow">Holnap</string>
    <string name="days2">2 nap múlva</string>
    <string name="today">Ma</string>
    <string name="overdays7">Több mint 7 nap múlva</string>
    <string-array name="filterTypes">
        <item>Új</item>
        <item>Téma</item>
        <item>Csoport</item>
        <item>Kész</item>
        <item>Befejezetlen</item>
    </string-array>
    <string-array name="taskTypes">
        <item>házi feladat</item>
        <item>beadandó</item>
        <item>teszt</item>
        <item>felelés</item>
    </string-array>
    <string-array name="options_array">
        <item>Értesítés beállítások</item>

        <item>Jelszó Beállítás</item>
        

        
    </string-array>
    <string name="badge_owner">TULAJDONOS</string>
    <string name="group_type_open">Nyitott</string>
    <string name="group_type_invite_only">Meghívás alapú</string>
    <string name="group_type_password">Jelszó alapú</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="button_save">Mentés</string>
    <string name="button_send">Küldés</string>
    <string name="button_add">Hozzáad</string>
    <string name="button_create">Létrehozás</string>
    <string name="button_join">Csatlakozás</string>
    <string name="mainpage_menu">Főoldal</string>
    <string name="createGroup_menu">Új csoport létrehozás</string>
    <string name="joinGroup_menu">Csatlakozás csoportba</string>
    <string name="leaveGroup_menu">Csoportból kilépés</string>
    <string name="uploadProfilePic_menu">Profilkép feltöltése</string>
    <string name="fragment_title_new_mytask">Új feladatom</string>
    <string name="fragment_title_new_task">Új feladat</string>
    <string name="fragment_title_edit_task">Feladat szerkesztés</string>
    <string name="empty_field">Üres mező</string>
    <string name="empty_field_password">Üres jelszó</string>
    <string name="ok">OK</string>
    <string name="close">Bezár</string>
    <string name="thera">Théra</string>
    <string name="settings">Beállítások</string>
    <string name="feedback">Visszajelzés</string>
    <string name="groups">Csoportok</string>
    <string name="task">Feladat</string>
    <string name="tasks">Feladatok</string>
    <string name="announcement">Bejegyzés</string>
    <string name="announcements">Bejegyzések</string>
    <string name="subject">Téma</string>
    <string name="subjects">Témák</string>
    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="login">Bejelentkezés</string>
    <string name="enter">Belépés</string>
    <string name="register">Regisztráció</string>
    <string name="displayName">Becenév</string>
    <string name="registrationDate">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="users">Felhasználók</string>
    <string name="password">Jelszó</string>
    <string name="email">Email</string>
    <string name="autologin">Automatikus bejelentkezés</string>
    <string name="login_remember">Felhasználó megyjegyzése</string>
    <string name="comments">Megjegyzések</string>
    <string name="edit">Szerkesztés</string>
    <string name="delete">Törlés</string>
    <string name="leave_group">Csoportból kilépés</string>
    <string name="my_tasks">Feladataim</string>
    <string name="view_mytask">Én feladatom megtekintése</string>
    <string name="notification_settings">Értesítés beállítások</string>
    <string name="notification">Értesítés</string>
    <string name="notifications">Értesítések</string>
    <string name="go_back">Vissza</string>
    <string name="reply">Válasz</string>
    <string name="viewProfile">Profil megtekintése</string>
    <string name="later">múlva</string>
    <string name="no">Nem</string>
    <string name="yes">Igen</string>
    <string name="choose_group">Válasz csoportot</string>
    <string name="write_comment">Írj egy kommentet!</string>
    <string name="schedules">Schedules</string>
    <string name="grades">Grades</string>
    <string name="copy">Másolás</string>
    <string name="share">Megosztás</string>
    <string name="loading">Betöltés…</string>
    <string name="switch_account">Fiók váltás</string>
    <string name="server_address">Szerver cím</string>
    <string name="set">Beállítás</string>
    <string name="dangerous">Veszélyes!!!</string>
    <string name="copied">Másolva</string>
    <string name="copied_to_clipboard">Vágólapra másolva</string>
    <string name="message_from_devs">Üzenet a fejlesztőktől</string>
    <string name="school_">Iskola:</string>
    <string name="add_user">Új felhasználó</string>
    <string name="no_task">Nincs feladat</string>
    <string name="no_announcement">Nincs bejegyzés</string>
    <string name="no_subject">Nincs téma</string>
    <string name="subject_none">&lt;Nincs&gt;</string>
    <string name="no_comment">Nincs hozzászólás</string>
    <string name="groupMembers">Tagok</string>
    <string name="title_">Cím: </string>
    <string name="deadline_">Határidő:</string>
    <string name="group_">Csoport:</string>
    <string name="creator_">Létrehozó:</string>
    <string name="description_">Leírás:</string>
    <string name="subject_">Téma:</string>
    <string name="tasktype_">Feladat típusa:</string>
    <string name="daysLeft">nap múlva</string>
    <string name="displayName_">Becenév:</string>
    <string name="registrationDate_">Regisztráció:</string>
    <string name="username_">Felhasználónév:</string>
    <string name="leaveGroup_successful">Csoport elhagyva</string>
    <string name="press_again_to_exit">Nyomd meg mégegyszer a VISSZA gombot hogy kilépj</string>
    <string name="invite_link_info">Küld el diáktársaidnak ezt a linket hogy csatlakozanak a</string>
    <string name="invite_link_info_part2">csoportba</string>
    <string name="already_in_group">Már tagja voltál a csoportnak</string>
    <string name="added_to_group">Sikeresen hozzá lettél adva a csoporthoz</string>
    <string name="invite_to_group_text_title">Házizz Droid: </string>
    <string name="invite_to_group_text_part1">Csatlakoz a </string>
    <string name="invite_to_group_text_part2"> csoportba hogy megkapd a házi feladataidat</string>
    <string name="termsAndConditions">Elfogadom az<a href="https://hazizz.github.io/privacy-hu.txt"> adatvédelmi nyilatkozatot</a></string>
    <string name="passwordagain_fragment_register">Jelszó mégegyszer</string>
    <string name="areyousure_delete_task">Biztos hogy törlöd a feladatot?</string>
    <string name="areyousure_delete_announcement">Biztos hogy törlöd a bejegyzést?</string>
    <string name="areyousure_leave_group">Biztos hogy kilépsz ebből a csoportból?</string>
    <string name="error_passwordRequiredForGroup">Jelszó szükséges a csoporthoz belépéshez</string>
    <string name="toast_feedback_thanks">Köszönjük a visszajelzésedet</string>
    <string name="hint_description_feedback">Visszajelzés</string>
    <string name="hint_fragment_joingroup">Csoport név</string>
    <string name="hint_add_subject">Új téma</string>
    <string name="hint_newgroup">Új csoport</string>
    <string name="title_fragment_tabgroup">Csoport:</string>
    <string name="title_set_server_address">Szerver cím beállítás</string>
    <string name="title_choose_at">Feladat/bejegyzés választó</string>
    <string name="title_activity_feedback">Visszajelzés</string>
    <string name="title_fragment_groups">Csoportjaid</string>
    <string name="title_fragment_joingroup">Belépés egy csoportba</string>
    <string name="title_fragment_taskeditor">Új feladat</string>
    <string name="title_newannouncement">Új bejegyzés</string>
    <string name="title_editannouncement">Bejegyzés szerkesztés</string>
    <string name="title_fragment_comments">Megjegyzések</string>
    <string name="title_fragment_creategroup">Új csoport létrehozása</string>
    <string name="title_fragment_view_announcement">Bejegyzés Megtekintés</string>
    <string name="title_fragment_view_task">Feladat Megtekintés</string>
    <string name="tasktype_fragment_taskeditor">Feladat típusa:</string>
    <string name="choose_deadline_fragment_taskeditor">Válasz határidőt!</string>
    <string name="subject_fragment_taskeditor">Téma:</string>
    <string name="textview_logout_drawer">Kijelentkezés</string>
    <string name="add_subject">Téma hozzáadás</string>
    <string name="report_bug">Hiba jelentése</string>
    <string name="info_serverUnexpectedResponse">Nem megszokott válasz a szervertől</string>
    <string name="info_serverNotResponding">Szerver nem válaszol</string>
    <string name="info_something_went_wrong">Valami hiba történt</string>
    <string name="info_noInternetAccess">Nincs internet kapcsolat</string>
    <string name="info_serverAddressChange">Ha a cím nem helyes az alkalmazást újra kell telepíteni</string>
    <string name="select_school">Iskola kiválasztás</string>
    <string name="error">Hiba</string>
    <string name="error_termsAndConditionsNotAccepted">Nem fogadtad el az adatvédelmi nyilatkozatot</string>
    <string name="error_accountLocked">A fiók zárolva van</string>
    <string name="error_accountExpired">A fiók lejárt</string>
    <string name="error_accountBanned">A fiók le van tiltva</string>
    <string name="error_accountNotFound">Felhasználó nem található</string>
    <string name="error_usernameNotFound">Csak számokat, betűket, alsóvonalat és kötőjelet tartalmazhat a felhasználónév</string>
    <string name="error_usernameFormat">Csak számokat, betűket, alsóvonalat és kötőjelet tartalmazhat a felhasználónév</string>
    <string name="error_usernameTaken">A felhasználónév már foglalt</string>
    <string name="error_username">A felhasználónévnek legalább 4 karakteresnek kell lennie</string>
    <string name="error_usernameLength">Felhasználónév 4\-8 karakteres kell hogy legyen</string>
    <string name="error_emailWrong">Az email helytelen</string>
    <string name="error_emailTaken">Az emailel már regisztráltak</string>
    <string name="error_registrationLocked">A regisztráció zárolva van</string>
    <string name="error_displayNameLength">A becenévnek 4\-20 karakternek kell lennie!</string>
    <string name="error_titleLentgh">A cím 2\-20 karakter között lehet</string>
    <string name="error_titleNotAcceptable">A cím nem megfelelő</string>
    <string name="changePassword">Jelszó módosítás</string>
    <string name="currentPassword">Jelenlegi jelszó</string>
    <string name="newPassword">Új jelszó</string>
    <string name="newPasswordAgain">Új jelszó mégegyszer</string>
    <string name="password_notMatch">Jelszó nem egyezik</string>
    <string name="error_wrongPassword">Helytelen jelszó</string>
    <string name="error_passwordNotLongEnough">Jelszó legalább 8 karakteres kell hogy legyen</string>
</resources>