<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_leaveGroup"
        android:orderInCategory="100"
        android:title="@string/leaveGroup_menu"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profilePic"
        android:orderInCategory="100"
        android:title="@string/uploadProfilePic_menu"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="never" />

</menu>
