<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >



    <item
        android:id="@+id/popupitem_reply"
        android:icon="@drawable/ic_reply_black"
        android:orderInCategory="100"
        android:title="@string/reply"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/popupitem_viewProfile"
        android:icon="@drawable/ic_person_black"
        android:orderInCategory="100"
        android:title="@string/viewProfile"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/popupitem_edit"
        android:icon="@drawable/ic_create_black"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/popupitem_delete"
        android:icon="@drawable/ic_delete_black"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="never" />


</menu>
