<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hazizz"
            android:icon="@drawable/ic_home_black"
            android:title="@string/mainpage_menu"
            />
        <item
            android:visible="true"
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_group_black"
            android:title="@string/schedules"
            />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_person_black"
            android:title="@string/grades"
            />
    </group>

    <item android:title="Csoport: "
        android:id="@+id/nav_item_mainGroup"
        android:checkableBehavior="single"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_tasks"
                android:icon="@drawable/ic_assignment_black"
                android:title="Feladatok" />
            <item
                android:id="@+id/nav_groupMembers"
                android:icon="@drawable/ic_group_black"
                android:title="Csoport tagok" />
        </menu>
    </item>

</menu>
